--- a/examples/yewtify-example/static/index.html
+++ b/examples/yewtify-example/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Yewtify Example</title>
+        <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="yewtify.css" />
         <script src="bundle.js" defer></script>
     </head>
